doc: send a qrcode image when create account.